<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:id="@+id/settings_linear_layout">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/message_content"
        android:id="@+id/textView"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/include_distance"
        android:id="@+id/includeDistanceInMessage"
        android:layout_gravity="center_horizontal|left"
        android:checked="false"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/include_destination"
        android:id="@+id/includeDestinationInMessage"
        android:layout_gravity="center_horizontal|left"
        android:checked="false"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/include_maps_link"
        android:id="@+id/includeMapsLinkCheckBox"
        android:layout_gravity="center_horizontal|left"
        android:checked="false"/>

</LinearLayout>