<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1">
    <LinearLayout
                  android:orientation="vertical"
                  android:layout_width="fill_parent"
                  android:layout_height="fill_parent"
                  android:weightSum="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Recipient"
            android:id="@+id/recipientNumberLabel"
            android:paddingTop="10dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">

            <AutoCompleteTextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/recipientNumber"
                android:layout_weight="1"
                android:maxLines="1"/>

            <ProgressBar
                style="?android:attr/progressBarStyleSmall"
                android:layout_width="36dp"
                android:layout_height="match_parent"
                android:id="@+id/recipientsLoadingSpinner"
                android:visibility="gone"
                android:indeterminate="false" />

            <ImageButton
                android:id="@+id/button_contact_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_action_user"
                android:background="@android:color/transparent"/>
        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/destination_label"
            android:id="@+id/destinationLabel"
            android:paddingTop="10dp" />

        <AutoCompleteTextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/destination"
            android:inputType="text"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/mode_of_travel"
            android:id="@+id/modeOfTravelLabel"
            android:paddingTop="10dp" />

        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/mode_of_travel_radio_group"
            >
            <RadioButton
                android:id="@+id/mode_of_travel_car"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Car"
                android:layout_gravity="center|left"
                android:layout_weight="1"
                android:textSize="14dp"
                />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Bike"
                android:id="@+id/mode_of_travel_bike"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:textSize="14dp"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Walking"
                android:id="@+id/mode_of_travel_walking"
                android:checked="false"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:textSize="14dp" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_frequency"
            android:id="@+id/update_every"
            android:layout_gravity="center_horizontal"
            android:paddingTop="10dp" />
        <NumberPicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/numberPicker"
            android:layout_gravity="center_horizontal"
            android:layout_alignStart="@+id/numberPicker"
            android:layout_alignLeft="@+id/numberPicker"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Start"
            android:id="@+id/start_button"
            android:layout_gravity="center_horizontal"/>

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sendingSpinner"
            android:layout_gravity="center_horizontal"
            android:visibility="gone"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Stop"
            android:id="@+id/stop_button"
            android:layout_gravity="center_horizontal"
            android:visibility="gone"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/next_update_view"
            android:layout_gravity="center_horizontal"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:src="@drawable/powered_by_google_light"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>
</ScrollView>
